# ai-governance-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml  readme.md
examples/: example_config.json
scripts/: install.sh  simple_test_script.py  test_local.py
src/ai_governance_mcp/: __init__.py  database.py  patterns.py  policies.py  server.py  utils.py
tests/: test_patterns.py  test_policies.py  test_server.py
